# nrhelper

./: .gitignore  build.bat  build.ps1  config.yaml  manual.txt  pyproject.toml  release.ps1  requirements.txt
.github/workflows/: advanced-release.yml  release.yml
data/csv/: map_patterns.csv  names.csv  positions.csv
data/day_template/: langs.yaml
src/: app.py  common.py  config.py  detector.py  input.py  logger.py  overlay.py  screenshot.py  settings.py  updater.py
src/detector/: __init__.py  art_detector.py  day_detector.py  hp_detector.py  map_detector.py  map_info.py  rain_detector.py  utils.py
src/ui/: bug_report.py  capture_region.py  hp_overlay.py  input.py  map_overlay.py  nightlord_selector.py  overlay.py  screenshot.py  settings.py  utils.py
