[project]
name = "nrhelper"
version = "0.1.0"
description = "Add your description here"
requires-python = "~=3.10.19"
dependencies = [
    "mss==10.1.0",
    "opencv-python==4.12.0.88",
    "pillow==11.3.0",
    "platformdirs==4.5.0",
    "pygame==2.6.1",
    "pyinstaller==6.16.0",
    "pynput==1.8.1",
    "pyqt6==6.9.1",
    "pywin32==311",
    "pyyaml==6.0.3",
]
